task: finish field injection by super class